start scan box visible after loading indicator stops

--- a/web/my_face_mesh.css
+++ b/web/my_face_mesh.css
@@ -76,17 +76,16 @@ body {
   width: 27%;
   height: auto;
   padding: 15px;
-  display: flex;
   flex-direction: column;
   justify-content: center;
   color: black;
   font-family: Arial, sans-serif;
-  position: fixed; /* Position fixed to always stay at the bottom */
-  bottom: 5%; /* Position 5% from the bottom of the viewport */
+  position: fixed;
+  bottom: 5%;
   background-color: white;
   border-radius: 20px;
   gap: 0;
-  z-index: 3; /* Above video and canvas */
+  z-index: 3;
   margin-left: auto;
   margin-right: auto;
   left: 0;
